--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -109,6 +109,21 @@ jobs:
         exit-code: '1'
         ignore-unfixed: true
   
+  dependency-review:
+    name: Dependency Review
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
+    steps:
+    - name: Checkout Repository
+      uses: actions/checkout@v4
+    
+    - name: Dependency Review
+      uses: actions/dependency-review-action@v4
+      with:
+        fail-on-severity: high
+  
   docker-build-test:
     name: Test Docker Build
     runs-on: ubuntu-latest
